--- a/css/style2.css
+++ b/css/style2.css
@@ -46,7 +46,7 @@ body {
 }
 
 .imge{
-    background-image: url(/wedfigam/icon/anh7.png);
+    background-image: url(/icon/anh7.png);
     width: 100%;
     height: 10%;
     position: absolute;
