--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
    padding-block: 150px;
  }
  .user-icon{
-    background-image: url(/wedfigam/icon/anh7.png);
+    background-image: url(/icon/anh7.png);
     width: 100%;
     height: 100%;
     position: absolute;
